fix anchor and img alignment in header and add border

--- a/Shopping-Cart/src/styles/shopPage.css
+++ b/Shopping-Cart/src/styles/shopPage.css
@@ -13,13 +13,21 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 5px solid black;
+}
+
+header > a {
+  display: flex;
+  margin-left: 10px;
 }
 
 header > a > img {
+  box-sizing: border-box;
   padding: 0 10px;
-  margin-left: 10px;
-  width: 80px;
+  width: 100px;
   background-color: white;
+  border: 5px solid black;
+  border-radius: 10px;
 }
 
 #content {
